--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Transcending the Psyche</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>If You're Seeking Truth... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>What a Day in a Japanese Daycare is like</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Winter Chill Can't Keep the Mystic Away! #Sadhguru #EcstasyOfEnlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Best Pizza Concept⎮Now You Can Partnership With Me</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -521,7 +521,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 12.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -972,7 +972,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Link?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2600,7 +2600,7 @@
                     <div class="video-info">
                         <h3>tip 12: tomato sauce spilled on the pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 16, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5820,7 +5820,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 12.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Transcending the Psyche</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>If You're Seeking Truth... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>Winter Chill Can't Keep the Mystic Away! #Sadhguru #EcstasyOfEnlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7960,7 +7960,7 @@
                         <div class="video-info">
                             <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9402,7 +9402,7 @@
                         <div class="video-info">
                             <h3>Best Pizza Concept⎮Now You Can Partnership With Me</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9677,7 +9677,7 @@
                         <div class="video-info">
                             <h3>tip 12: tomato sauce spilled on the pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 16, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>What a Day in a Japanese Daycare is like</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10448,7 +10448,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Link?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
